--- a/_includes/social.html
+++ b/_includes/social.html
@@ -20,3 +20,13 @@
   {%- if social.devto -%}<li><a href="https://dev.to/{{ social.devto | cgi_escape | escape }}" title="{{ social.devto | escape }}"><svg class="svg-icon grey"><use xlink:href="{{ '/assets/minima-social-icons.svg#devto' | relative_url }}"></use></svg></a></li>{%- endif -%}
   {%- if social.rss -%}<li><a href="{{ 'feed.xml' | relative_url }}" title="{{ social.rss | escape }}"><svg class="svg-icon grey"><use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use></svg></a></li>{%- endif -%}
 </ul>
+
+<div class="social">
+  <a href="https://twitter.com/bphillips201"><i id="twitter" class="icon-twitter"></i></a>
+  <i id="github" class="icon-github"></i>
+  <i id="stack" class="icon-stackexchange"></i>
+  <i id="linkedin" class="icon-linkedin-sign"></i>
+  <i id="code" class="icon-code"></i>
+  <i id="plus" class="icon-google-plus-sign"></i>
+  <i id="mail" class="icon-envelope"></i> 
+</div>
