Add social links

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -24,11 +24,8 @@
 
 -->
 <div class="social">
-  <a href="https://twitter.com/bphillips201"><i id="twitter" class="icon-twitter"></i></a>
-  <i id="github" class="icon-github"></i>
-  <i id="stack" class="icon-stackexchange"></i>
-  <i id="linkedin" class="icon-linkedin-sign"></i>
-  <i id="code" class="icon-code"></i>
-  <i id="plus" class="icon-google-plus-sign"></i>
-  <i id="mail" class="icon-envelope"></i> 
+  <a href="mailto:tom@tpmb.uk"></a><i id="mail" class="icon-envelope"></i> </a>
+  <a href="https://github.com/tburrows13"></a><i id="github" class="icon-github"></i></a>
+  <a href="https://stackoverflow.com/users/6732358/tburrows13"></a><i id="stack" class="icon-stackexchange"></i></a>
+  <a href="https://linkedin.com/in/tpmburrows/"></a><i id="linkedin" class="icon-linkedin-sign"></i></a>
 </div>
