--- a/public/css/social.css
+++ b/public/css/social.css
@@ -1,14 +1,3 @@
-.me {
-  display: block;
-  margin: 2em auto;
-  margin-bottom: 3em;
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  position: relative;
-  z-index: 2;
-}
-
 .social {
   text-align: center;
   font-size: 2.5em;
@@ -20,7 +9,7 @@
   text-decoration: none;
 }
 .social i {
-  margin: .3em;
+  margin: .2em;
   cursor: pointer;
   transition: color 300ms ease, margin-top 300ms ease;
   transform: translateZ(0);
@@ -28,8 +17,8 @@
 .social i:hover {
   margin-top: -1px;
 }
-.social i#twitter:hover {
-  color: #77DDF6;
+.social i#github:hover {
+  color: black;
 }
 .social i#linkedin:hover {
   color: #0177B5;
