--- a/_includes/social.html
+++ b/_includes/social.html
@@ -24,8 +24,8 @@
 
 -->
 <div class="social">
-  <a href="mailto:tom@tpmb.uk"></a><i id="mail" class="icon-envelope"></i> </a>
-  <a href="https://github.com/tburrows13"></a><i id="github" class="icon-github"></i></a>
-  <a href="https://stackoverflow.com/users/6732358/tburrows13"></a><i id="stack" class="icon-stackexchange"></i></a>
-  <a href="https://linkedin.com/in/tpmburrows/"></a><i id="linkedin" class="icon-linkedin-sign"></i></a>
+  <a href="mailto:tom@tpmb.uk" target="_blank"><i id="mail" class="icon-envelope"></i></a>
+  <a href="https://github.com/tburrows13" target="_blank"><i id="github" class="icon-github"></i></a>
+  <a href="https://stackoverflow.com/users/6732358/tburrows13" target="_blank"><i id="stack" class="icon-stackexchange"></i></a>
+  <a href="https://linkedin.com/in/tpmburrows/" target="_blank"><i id="linkedin" class="icon-linkedin-sign"></i></a>
 </div>
