--- a/_includes/social.html
+++ b/_includes/social.html
@@ -28,4 +28,6 @@
   <a href="https://github.com/tburrows13" target="_blank"><i id="github" class="icon-github"></i></a>
   <a href="https://stackoverflow.com/users/6732358/tburrows13" target="_blank"><i id="stack" class="icon-stackexchange"></i></a>
   <a href="https://linkedin.com/in/tpmburrows/" target="_blank"><i id="linkedin" class="icon-linkedin-sign"></i></a>
+  <a href="https://www.facebook.com/tom.p.burrows" target="_blank"><i id="facebook" class="icon-facebook-sign"></i></a>
+
 </div>
