--- a/public/css/social.css
+++ b/public/css/social.css
@@ -8,7 +8,7 @@
   text-decoration: none;
 }
 .social i {
-  margin: .05em;
+  margin: .07em;
   white-space: nowrap;
   cursor: pointer;
   transition: color 300ms ease, margin-top 300ms ease;
@@ -18,7 +18,7 @@
   margin-top: -1px;
 }
 .social i#github:hover {
-  color: black;
+  color: white;
 }
 .social i#linkedin:hover {
   color: #0177B5;
@@ -30,5 +30,5 @@
   color: #F7B401;
 }
 .social i#facebook:hover {
-  color: #082b8a;
+  color: #4260b4;
 }
