Title css tweak

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -83,6 +83,10 @@ html {
   font-size: 3.25rem;
 }
 
+.sidebar-about h1 a {
+  text-decoration: none;
+}
+
 /* Sidebar nav */
 .sidebar-nav {
   margin-bottom: 1rem;
