Anti spambot email address

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,7 +1,13 @@
 {%- assign social = site.social_links -%}
 
 <div class="social">
-  <a href="mailto:tom@tpmb.uk" target="_blank"><i id="mail" class="icon-envelope"></i></a>
+  <script type="text/javascript">
+    a = "m@tp"
+    b = "to"
+    c = "k"
+    d = "mb.u"
+    document.write('<a href="mailto:' + b + a + d + c + '" target="_blank"><i id="mail" class="icon-envelope"></i></a>');
+  </script>
   <a href="https://github.com/tburrows13" target="_blank"><i id="github" class="icon-github"></i></a>
   <a href="https://stackoverflow.com/users/6732358/tburrows13" target="_blank"><i id="stack" class="icon-stackexchange"></i></a>
   <a href="https://linkedin.com/in/tpmburrows/" target="_blank"><i id="linkedin" class="icon-linkedin-sign"></i></a>
