Clean up config

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -6,7 +6,7 @@
     b = "to"
     c = "k"
     d = "mb.u"
-    document.write('<a href="mailto:' + b + a + d + c + '" target="_blank"><i id="mail" class="icon-envelope"></i></a>');
+    document.write('<a href="ma' + 'ilto:' + b + a + d + c + '" target="_blank"><i id="mail" class="icon-envelope"></i></a>');
   </script>
   <a href="https://github.com/tburrows13" target="_blank"><i id="github" class="icon-github"></i></a>
   <a href="https://stackoverflow.com/users/6732358/tburrows13" target="_blank"><i id="stack" class="icon-stackexchange"></i></a>
